--- a/micro-services/billing-service/src/main/resources/application.properties
+++ b/micro-services/billing-service/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-server.port=8083
+server.port = 8083
 spring.application.name=billing-service
-spring.datasource.url=jdbc::h2::mem:bill-db
-spring.h2.console.enabled=true
-
+spring.datasource.url=jdbc:h2:mem:billing-db
+spring.cloud.discovery.enabled=true
